# hse-project-template

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  bmp_factory.hpp  filter.hpp  main.cpp
include/: bmp.hpp  filter.hpp
include/bmp_factories/: bmp_factory.hpp
src/bmp_factories/: bmp_factory.cpp
tests/: CMakeLists.txt
